--- a/winweb03.yaml
+++ b/winweb03.yaml
@@ -83,6 +83,7 @@ spec:
         resources:
           requests:
             memory: 6Gi
+      evictionStrategy: None
       networks:
       - name: default
         pod: {}
