change winweb03 to pvc based

--- a/winweb03.yaml
+++ b/winweb03.yaml
@@ -16,8 +16,11 @@ spec:
       name: winweb03
     spec:
       source:
-        http:
-          url: 'http://s3.us-east.cloud-object-storage.appdomain.cloud/roadshowocpvirt/winweb01.qcow2'
+        pvc:
+          name: winweb01
+          namespace: default
+        # http:
+        #   url: 'http://s3.us-east.cloud-object-storage.appdomain.cloud/roadshowocpvirt/winweb01.qcow2'
       storage:
         resources:
           requests:
