winweb03: slim down and live migrate

--- a/winweb03.yaml
+++ b/winweb03.yaml
@@ -85,8 +85,8 @@ spec:
           type: q35
         resources:
           requests:
-            memory: 6Gi
-      evictionStrategy: None
+            memory: 1Gi
+      evictionStrategy: LiveMigrate
       networks:
       - name: default
         pod: {}
