--- a/ossm_resources.yaml
+++ b/ossm_resources.yaml
@@ -1,4 +1,17 @@
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: winmesh
+spec:
+  selector:
+    env: winmesh
+  ports:
+  - protocol: TCP
+    name: http
+    port: 80
+    targetPort: 80
+---
 kind: DestinationRule
 apiVersion: networking.istio.io/v1beta1
 metadata:
